# cse291-cloud-network-benchmark

./: .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yml  final-1.csv  final-az3.csv  locust_visual_cpu.py  locust_visual_latency.py  pyproject.toml  requirements.txt  visual.py  visualize.ipynb
bandwidth/: iperf3-client.yaml  iperf3-server.yaml
bandwith/: client-deployment.yaml  server-service.yaml
benchmarks/locust/: Dockerfile  README.md  build-image-and-relase.sh  client-locust.yaml  locustfile.py  server-locust.yaml
cli/: __main__.py  benchmarks.py  kubernetes_integration.py  requirements.txt
cli/util/: terminal_ui.py  yaml.py
client/: Dockerfile  __main__.py  client.yaml  iperf.schema.json  kubernetes_integration.py  locustfile.py  metrics.py  requirements.txt  run.sh  run_client.sh  visual.py
data/t3.micro/: 1000u1000r1min.txt  100u100r1min.txt  10u10r1min.txt
k8perf/: __init__.py  __main__.py  benchmark.py  benchmarks.py  kubernetes_integration.py  util_terminal_ui.py  util_yaml.py
locust_client/: Dockerfile  build.sh  cwagent-configmap.yaml  exp_stats.csv  exp_stats_history.csv  metric-server.yaml  run.sh
locust_server/: Dockerfile  index.html  server.yaml
locust_visual/: locust_visual_latency_heatmap.py  locust_visual_memory.py  locust_visual_rps.py
results/: 2022-11-02T23:23:25.455827.json  azure.csv
results/azure_results/: final-az1.csv  final-az2.csv
server/: Dockerfile  hostifle  hosts  install-kubernetes.sh  install-master-kubernetes.yml  iperf3-server.yml  kube_master.yml  kube_slave.yml  run.sh  server.yaml
(+251 files in other folders)
